--- a/src/slider.css
+++ b/src/slider.css
@@ -4,7 +4,7 @@
   height: 100vh;
   position: relative;
   overflow: hidden;
-  background-color: #050505;
+  background-color: var(--color-bg-dark);
 }
 
 .slide-container {
